--- a/app/frontend/view/mobile/common/base.html
+++ b/app/frontend/view/mobile/common/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- 重大通知栏 -->
-{notempty name="notice"}
+{notempty name="notice.notice"}
 <div class="g-notice" id="g-notice">
     <div class="des">
         <a href="{$notice.path}">{$notice.notice}</a>
