--- a/public/static/frontend/mobile/css/page/Home.css
+++ b/public/static/frontend/mobile/css/page/Home.css
@@ -31,11 +31,61 @@
   color: #333;
   text-align: center;
 }
+/*.hot {
+    margin: 10px;
+    .min-list .min-item {
+        position: relative;
+        margin-bottom: 10px;
+        &:nth-last-of-type(1) {
+            margin-bottom: 0;
+        }
+        img {
+            .img-responsive();
+            .center-block();
+        }
+        .des {
+            position: absolute;
+            top: 20%;
+            left: 0;
+            z-index: 1;
+            width: 50%;
+            padding: 0 10px;
+            font-size: 16px;
+            color: @whiteSmoke;
+        }
+    }
+}*/
 .hot {
   margin: 10px;
 }
-.hot .min-list .min-item {
+.hot .hot-title {
   position: relative;
+  z-index: 1;
+  text-align: center;
+  margin: 68px auto 40px;
+  font-weight: 600;
+}
+.hot .hot-title span {
+  padding: 0 30px;
+  background: #f5f5f5;
+}
+.hot .hot-title:before,
+.hot .hot-title:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  z-index: -1;
+  width: 40%;
+  height: 2px;
+  background: #00A82D;
+}
+.hot .hot-title:before {
+  left: 10%;
+}
+.hot .hot-title:after {
+  right: 10%;
+}
+.hot .min-list .min-item {
   margin-bottom: 10px;
 }
 .hot .min-list .min-item:nth-last-of-type(1) {
@@ -48,32 +98,28 @@
   margin-left: auto;
   margin-right: auto;
 }
-.hot .min-list .min-item .des {
-  position: absolute;
-  top: 20%;
-  left: 0;
-  z-index: 1;
-  width: 50%;
-  padding: 0 10px;
-  font-size: 16px;
-  color: #888;
+.newProductbefore,
+.newProduct:after {
+  content: " ";
+  display: table;
+  zoom: 1;
 }
-.star {
-  text-align: center;
+.newProduct:after {
+  clear: both;
 }
-.star h3 {
+.newProduct h3 {
   position: relative;
   z-index: 1;
   text-align: center;
   margin: 68px auto 40px;
   font-weight: 600;
 }
-.star h3 span {
+.newProduct h3 span {
   padding: 0 30px;
   background: #f5f5f5;
 }
-.star h3:before,
-.star h3:after {
+.newProduct h3:before,
+.newProduct h3:after {
   content: '';
   position: absolute;
   top: 50%;
@@ -82,140 +128,24 @@
   height: 2px;
   background: #00A82D;
 }
-.star h3:before {
+.newProduct h3:before {
   left: 10%;
 }
-.star h3:after {
+.newProduct h3:after {
   right: 10%;
 }
-.star .star-listbefore,
-.star .star-list:after {
-  content: " ";
-  display: table;
-  zoom: 1;
-}
-.star .star-list:after {
-  clear: both;
-}
-.star .star-list .left,
-.star .star-list .right {
-  float: left;
-  width: 50%;
-}
-.star .star-list .star-item {
-  float: left;
-  box-sizing: border-box;
-}
-.star .star-list .star-item img {
-  -webkit-transition: box-shadow 0.2s linear;
-  -moz-transition: box-shadow 0.2s linear;
-  -ms-transform: box-shadow 0.2s linear;
-  -o-transition: box-shadow 0.2s linear;
-  transition: box-shadow 0.2s linear;
+.newProduct img {
   display: block;
   max-width: 100%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
 }
-.star .star-list .star-item:hover img {
-  box-shadow: 0 8px 16px rgba(0, 168, 45, 0.18);
-}
-.star .star-list .left .star-item {
-  padding-right: 1px;
-}
-.star .star-list .right .star-item:nth-of-type(1) {
-  width: 50%;
-  padding-right: 0.5px;
-}
-.star .star-list .right .star-item:nth-of-type(2) {
-  width: 50%;
-  padding-left: 0.5px;
-}
-.star .star-list .right .star-item:nth-of-type(3) {
-  margin-top: 1px;
-}
-.videobefore,
-.video:after {
-  content: " ";
-  display: table;
-  zoom: 1;
-}
-.video:after {
-  clear: both;
-}
-.video h3 {
-  position: relative;
-  z-index: 1;
-  text-align: center;
-  margin: 68px auto 40px;
-  font-weight: 600;
-}
-.video h3 span {
-  padding: 0 30px;
-  background: #f5f5f5;
-}
-.video h3:before,
-.video h3:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  z-index: -1;
-  width: 40%;
-  height: 2px;
-  background: #00A82D;
-}
-.video h3:before {
-  left: 10%;
-}
-.video h3:after {
-  right: 10%;
-}
-.video .swiper-wrapper .swiper-slide {
-  position: relative;
-}
-.video .swiper-wrapper .swiper-slide .img-box img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-}
-.video .swiper-pagination-bullet-active {
-  background: #00A82D;
-}
-.video .img-box {
-  position: relative;
-}
-.video .img-box img {
-  transition: box-shadow 0.2s linear;
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-}
-.video .img-box .icon-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 9999;
-  margin-left: -30px;
-  margin-top: -30px;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.1);
-  -webkit-transition: background 0.2s linear;
-  -moz-transition: background 0.2s linear;
-  -ms-transform: background 0.2s linear;
-  -o-transition: background 0.2s linear;
-  transition: background 0.2s linear;
-}
-.video .img-box .icon-box .iconfont {
-  display: block;
-  font-size: 30px;
-  color: #00A82D;
+@media screen and (min-width: 320px) and (max-width: 375px) {
+  .hot {
+    margin: 5px;
+  }
+  .hot .min-list .min-item {
+    margin-bottom: 5px;
+  }
 }
