--- a/public/static/frontend/mobile/css/public/variables.less
+++ b/public/static/frontend/mobile/css/public/variables.less
@@ -6,7 +6,7 @@
 @baseColor: #333;
 @lightGrey: #777;
 @blackColor: #000;
-@activeColor: #00A82D;
+@activeColor: #00a82d;
 @hoverColor: @activeColor + 20;
 @minActive: #abcae9;
 @nav-hover-bgColor: #eee;
