--- a/app/frontend/view/mobile/home/index.html
+++ b/app/frontend/view/mobile/home/index.html
@@ -43,9 +43,10 @@
 <div class="newProduct common-width">
     <h3><span>NEW PRODUCT</span></h3>
     <div>
-        {notempty name="starProduct"}
+        <!--{notempty name="starProduct"}
         <a href="{$starProduct[0]['path']}"><img src="{$starProduct[0]['desktop']}" alt=""></a>
-        {/notempty}
+        {/notempty}-->
+        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/推荐位/NewProduct/505_M.jpg" alt="">
     </div>
 </div>
 {/block}
