--- a/public/static/frontend/mobile/css/page/Home.css
+++ b/public/static/frontend/mobile/css/page/Home.css
@@ -15,7 +15,7 @@
   margin-right: auto;
 }
 .banner .swiper-pagination-bullet-active {
-  background: #00A82D;
+  background: #00a82d;
 }
 .banner .img-box {
   position: relative;
@@ -77,7 +77,7 @@
   z-index: -1;
   width: 40%;
   height: 2px;
-  background: #00A82D;
+  background: #00a82d;
 }
 .hot .hot-title:before {
   left: 10%;
@@ -126,7 +126,7 @@
   z-index: -1;
   width: 40%;
   height: 2px;
-  background: #00A82D;
+  background: #00a82d;
 }
 .newProduct h3:before {
   left: 10%;
