--- a/public/static/frontend/mobile/css/public/components.css
+++ b/public/static/frontend/mobile/css/public/components.css
@@ -200,7 +200,7 @@ body {
 }
 .g-hd {
   width: 100%;
-  background: #00A82D;
+  background: #00a82d;
 }
 .g-hd .nav {
   width: 100%;
@@ -325,7 +325,7 @@ body {
   transition: all 0.2s linear;
 }
 .g-foot .foot .foot-item dl dd a:hover {
-  color: #00A82D;
+  color: #00a82d;
 }
 .g-foot .foot .foot-contact {
   margin-bottom: 20px;
@@ -417,7 +417,7 @@ body {
   transition: all 0.2s linear;
 }
 .g-path li a:hover {
-  color: #00A82D;
+  color: #00a82d;
 }
 .g-top {
   display: none;
